# QuaternionSLERP

./: .gitignore  CMakeLists.txt  README.md
demos/: demo_interpolation.cpp
include/geometry/: Cube.h
include/math/: Quat.h  Vec3.h
src/: backup.cpp  main.cpp
tests/: test_Vec3.cpp  test_quat.cpp
